<resources>
    <string name="app_name">Littletigers</string>
    <string name="facebook_app_id">336977890241694</string>
    <string name="fb_login_protocol_scheme">fb336977890241694</string>

    <!-- <string name="naver_client_ID">28dMbtnQ2ce6ytQckJ6h</string>
    <string name="default_web_client_id">734825216046-3umqn4hcvvk7vun1n44usgu0aolern24.apps.googleusercontent.com</string>-->

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>

    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이&#160;</string>
    <string name="alarm_comment">&#160;메시지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신의 계정을 팔로우하기 시작했습니다.</string>

    <!-- comment -->
    <string name="send">보내기</string>

    <!-- Add Photo -->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id"></item>
    <item name="masked" type="id"></item>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_done">완료</string>
    <string name="loading">로딩중입니다</string>
    <string name="connection_error_dialog">인터넷에 연결할 수 없습니다.</string>
    <string name="connection_error_dialog_button1">재시도</string>
    <string name="connection_error_dialog_button2">설정</string>
    <string name="connection_error_dialog_button3">어플리케이션 닫기</string>

    <string name="connection_GPS_dialog_text">GPS 정보를 업데이트하지 못 했습니다.\n정확한 정보가 나타나지 않을 수 있습니다.</string>
    <string name="connection_GPS_dialog_button1">계속하기</string>
    <string name="connection_GPS_dialog_button2">닫기</string>

    <string name="search_failed_notification">No search results</string>
</resources>
