<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/cover_account_iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            tools:src="@drawable/ic_account"
            android:layout_alignParentLeft="true" />
        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/account_iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/profile"
            tools:src="@drawable/ic_account"
            android:layout_alignParentLeft="true" />
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/add_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"
            android:layout_alignParentLeft="true">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_image_add_button"/>
        </LinearLayout>

        <Button
            android:background="@drawable/rectangle_btn"
            android:id="@+id/account_btn_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:text="@string/follow"
            android:theme="@style/ButtonStyle"
            android:textColor="@android:color/white"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/account_iv_profile"
            style="?android:attr/borderlessButtonStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/account_btn_follow_signout"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/account_iv_profile">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/post" />
                <TextView
                    android:id="@+id/account_tv_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/follower" />
                <TextView
                    android:id="@+id/account_tv_follower_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/following" />
                <TextView
                    android:id="@+id/account_tv_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/account_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>